force-app/main/default/objects/Matching__c/Matching__c.object-meta.xml
<CustomObject>
    <label>Matching</label>
    <nameField>
        <displayFormat>M-{YYYY}-{000000}</displayFormat>
        <label>Matching Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matchings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>