force-app/main/default/objects/Matching__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Kunde</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matchings</relationshipLabel>
    <relationshipName>Matchings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>