force-app/main/default/objects/Matching__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>Auslaufdatum</label>
    <type>Date</type>
</CustomField>