force-app/main/default/objects/Matching__c/fields/MatchingReasons__c.field-meta.xml
<CustomField>
    <fullName>MatchingReasons__c</fullName>
    <label>Matching Gründe</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geografisch</fullName>
            </value>
            <value>
                <fullName>Baufortschritt</fullName>
            </value>
            <value>
                <fullName>Zweiter Bauabschnitt</fullName>
            </value>
            <value>
                <fullName>Betreiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>