force-app/main/default/objects/Matching__c/fields/MatchingScore__c.field-meta.xml
<CustomField>
    <fullName>MatchingScore__c</fullName>
    <formula>0 +
IF(INCLUDES(MatchingReasons__c, &apos;Baufortschritt&apos;), 0.25, 0) +
IF(INCLUDES(MatchingReasons__c, &apos;Geografisch&apos;), 0.25, 0) +
IF(INCLUDES(MatchingReasons__c, &apos;Zweiter Bauabschnitt&apos;), 0.25, 0) +
IF(INCLUDES(MatchingReasons__c, &apos;Betreiber&apos;), 0.25, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>