force-app/main/default/objects/Matching__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Customer__c</columns>
    <columns>MatchingReasons__c</columns>
    <columns>MatchingScore__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>